# thunder-db

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.deb  Dockerfile.lowmem  Dockerfile.prebuilt  README.md  article.md  docker-compose.yml
.github/workflows/: release.yml
benchmarks/: generate-report.sh  run-benchmarks.sh
benchmarks/k8s/: benchmark-configmap.yaml  pgbench-job.yaml  redis-benchmark-job.yaml  sysbench-job.yaml
benchmarks/load-test/: config.sh  generate-report.sh  init-test-tables.sh  monitor-resources.sh  run-load-test.sh  test-concurrency.sh  test-dataset-scaling.sh  test-latency.sh  test-sustained.sh
benchmarks/load-test/k8s/: Dockerfile  config.sh  init-tables.sh  load-test-configmap.yaml  load-test-job.yaml  run-all.sh  run-k8s-load-test.sh  test-concurrency.sh  test-latency.sh
benchmarks/reports/: pgbench_k8s_report_20260208_124129.txt  pgbench_report_20260208_003908.txt  pgbench_report_20260208_003920.txt
benchmarks/scripts/: pgbench.sh  redis-benchmark.sh  sysbench-mysql.sh
config/: docker.toml  node1.toml  thunderdb.toml
crates/thunder-api/: Cargo.toml
crates/thunder-api/src/: auth.rs  dashboard.rs  graphql.rs  grpc.rs  handlers.rs  lib.rs  rate_limit.rs  rest.rs  sql_validator.rs  websocket.rs
crates/thunder-api/tests/: integration_test.rs  load_test.rs
crates/thunder-cdc/: Cargo.toml
crates/thunder-cdc/src/: connector.rs  event.rs  lib.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs
crates/thunder-client/: Cargo.toml
crates/thunder-client/src/: connection.rs  console.rs  lib.rs  pool.rs  statement.rs  transaction.rs
crates/thunder-cluster/: Cargo.toml  build.rs
crates/thunder-cluster/proto/: cluster.proto
crates/thunder-cluster/src/: catalog_sync.rs  coordinator.rs  deadlock.rs  gossip.rs  lib.rs  membership.rs  raft_node.rs  region.rs  replication.rs  scatter_gather.rs  topology.rs  transport.rs
crates/thunder-common/: Cargo.toml
crates/thunder-common/src/: audit.rs  circuit_breaker.rs  config.rs  error.rs  lib.rs  metrics.rs  rbac.rs  testing.rs  types.rs  utils.rs
crates/thunder-common/tests/: proptest_tests.rs
crates/thunder-fdw/: Cargo.toml
crates/thunder-fdw/src/: connector.rs  lib.rs  mongodb.rs  mysql.rs  plugin.rs  postgres.rs  pushdown.rs  redis.rs
crates/thunder-protocol/: Cargo.toml  PROTOCOL_COMPATIBILITY.md
crates/thunder-protocol/src/: auth.rs  lib.rs  mysql.rs  mysql_compat.rs  pgbench.rs  pool.rs  postgres.rs  resp.rs  session.rs  tls.rs
crates/thunder-query/: Cargo.toml
crates/thunder-query/benches/: query_bench.rs
crates/thunder-query/src/: executor.rs  lib.rs  parallel.rs  physical_plan.rs  vectorized.rs
crates/thunder-server/: Cargo.toml
crates/thunder-server/debian/: postinst  prerm
crates/thunder-server/src/: engine.rs  executor.rs  lib.rs  main.rs  workers.rs
crates/thunder-server/tests/: chaos_tests.rs
crates/thunder-sql/: Cargo.toml
crates/thunder-sql/src/: analyzer.rs  catalog.rs  dialect.rs  lib.rs  llm.rs  ml.rs  nlp.rs  optimizer.rs  parser.rs  planner.rs  types.rs  udf.rs
crates/thunder-storage/: Cargo.toml
crates/thunder-storage/benches/: storage_bench.rs
crates/thunder-storage/src/: btree.rs  buffer.rs  catalog.rs  column_store.rs  compression.rs  disk.rs  lib.rs  page.rs  row_store.rs  wal.rs
crates/thunder-storage/tests/: acid_compliance.rs
crates/thunder-txn/: Cargo.toml
crates/thunder-txn/benches/: txn_bench.rs
crates/thunder-txn/src/: ccp.rs  coordinator.rs  deadlock.rs  lib.rs  lock_manager.rs  mvcc.rs
crates/thunder-vector/: Cargo.toml
crates/thunder-vector/benches/: vector_bench.rs
crates/thunder-vector/src/: distance.rs  hnsw.rs  ivf.rs  lib.rs  quantization.rs
deploy/: runbook.md  slo.yaml
deploy/grafana/: thunderdb-dashboard.json
deploy/helm/thunderdb/: .helmignore  Chart.yaml  values-benchmark.yaml  values.yaml
deploy/helm/thunderdb/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  pdb.yaml  pgbench-job.yaml  secret.yaml  service.yaml  statefulset.yaml
deploy/k8s/: configmap.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml  statefulset.yaml
deploy/prometheus/: alerts.yaml
scripts/: build-deb.sh  build.sh  cluster.sh  dev.sh  docker-build-push.sh  run-docker.sh  run_tests.sh  thunderdb.service
