[workspace]
resolver = "2"
members = [
    "crates/thunder-common",
    "crates/thunder-storage",
    "crates/thunder-txn",
    "crates/thunder-sql",
    "crates/thunder-query",
    "crates/thunder-cluster",
    "crates/thunder-protocol",
    "crates/thunder-cdc",
    "crates/thunder-fdw",
    "crates/thunder-vector",
    "crates/thunder-api",
    "crates/thunder-server",
    "crates/thunder-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ThunderDB Team"]
license = "Apache-2.0"
repository = "https://github.com/thunderdb/thunderdb"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.5"

# Avro serialization
apache-avro = { version = "0.16", features = ["snappy"] }

# Protocol Buffers & gRPC
prost = "0.12"
prost-types = "0.12"
tonic = "0.11"
tonic-build = "0.11"

# SQL parsing
sqlparser = "0.43"

# Arrow & DataFusion (pinned for compatibility)
arrow = { version = "53", features = ["prettyprint"] }
arrow-array = "53"
arrow-buffer = "53"
arrow-schema = "53"
datafusion = "43"
datafusion-common = "43"
datafusion-expr = "43"
datafusion-physical-expr = "43"

# Storage
rocksdb = "0.22"

# Consensus
raft = "0.7"

# Concurrency & atomic swaps
arc-swap = "1.7"
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-epoch = "0.9"
dashmap = "5.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4.38", default-features = false, features = ["serde", "std", "clock"] }
time = "0.3.36"  # Pinned for Rust 1.85 compatibility
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
humantime = "2.1"
hex = "0.4"

# Random
rand = "0.8"

# LRU caching
lru = "0.12"

# Hashing
ahash = "0.8"
crc32fast = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
base64 = "0.21"
argon2 = "0.5"

# Encryption
aes-gcm = "0.10"

# Filesystem utilities
fs2 = "0.4"

# Memory management
socket2 = { version = "0.5", features = ["all"] }
memmap2 = "0.9"
jemalloc-ctl = "0.5"
tikv-jemallocator = "0.5"

# Networking
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit", "request-id", "timeout"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio-stream = { version = "0.1", features = ["sync"] }
hyper = { version = "1.1", features = ["full"] }

# Database clients (for FDW/CDC)
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "mysql"] }
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# GraphQL (pinned for Rust 1.85 compatibility)
async-graphql = "6.0"
async-graphql-axum = "6.0"

# OpenTelemetry (optional, feature-gated)
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.9"
fake = { version = "2.9", features = ["derive"] }

# Config
config = "0.14"
toml = "0.8"
clap = { version = "4.4", features = ["derive", "env"] }

# Internal crates
thunder-common = { path = "crates/thunder-common" }
thunder-storage = { path = "crates/thunder-storage" }
thunder-txn = { path = "crates/thunder-txn" }
thunder-sql = { path = "crates/thunder-sql" }
thunder-query = { path = "crates/thunder-query" }
thunder-cluster = { path = "crates/thunder-cluster" }
thunder-protocol = { path = "crates/thunder-protocol" }
thunder-cdc = { path = "crates/thunder-cdc" }
thunder-fdw = { path = "crates/thunder-fdw" }
thunder-vector = { path = "crates/thunder-vector" }
thunder-api = { path = "crates/thunder-api" }
thunder-server = { path = "crates/thunder-server" }
thunder-client = { path = "crates/thunder-client" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true

[profile.dev]
opt-level = 0
debug = true
