[package]
name = "thunder-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "API layer for ThunderDB - REST, gRPC, GraphQL, WebSocket"

[dependencies]
thunder-common.workspace = true
thunder-sql.workspace = true
thunder-query.workspace = true
thunder-cdc.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tonic.workspace = true
prost.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
arrow.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
base64.workspace = true
hex.workspace = true
dashmap.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
http-body-util = "0.1"
