[package]
name = "thunder-cdc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Change Data Capture connectors for ThunderDB - PostgreSQL, MySQL, MongoDB, Redis"

[dependencies]
thunder-common.workspace = true
thunder-storage.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio-postgres.workspace = true
sqlx.workspace = true
mongodb.workspace = true
redis.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
rand.workspace = true
hex.workspace = true
apache-avro.workspace = true
prost.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
