[package]
name = "thunder-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Native Rust client for ThunderDB with interactive console"

[[bin]]
name = "thunder-cli"
path = "src/console.rs"

[dependencies]
thunder-common.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
arrow.workspace = true
arrow-array.workspace = true
uuid.workspace = true
chrono.workspace = true
url = "2.5"
rustls = "0.22"
tokio-rustls = "0.25"
md5 = "0.7"
hex = "0.4"
parking_lot.workspace = true

# CLI dependencies (for thunder-cli binary)
clap = { version = "4.5", features = ["derive", "env"] }
rustyline = "14.0"
colored = "2.1"
dirs = "5.0"
ctrlc = "3.4"
comfy-table = "7.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
