[package]
name = "thunder-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Common types, errors, and utilities for ThunderDB"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
ahash.workspace = true
crc32fast.workspace = true
humantime.workspace = true
hex.workspace = true
tempfile.workspace = true
sha2 = "0.10"
subtle = "2.5"
argon2.workspace = true
rand.workspace = true

[dev-dependencies]
proptest.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
