[package]
name = "thunder-vector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Vector indexing for ThunderDB - HNSW, IVF, similarity search"

[dependencies]
thunder-common.workspace = true
thunder-storage.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
bincode.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
rand = "0.8"
ordered-float = "4.2"
rayon = "1.8"

# SIMD support
simsimd = { version = "4.0", optional = true }

[features]
default = []
simd = ["simsimd"]

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
criterion.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }

[[bench]]
name = "vector_bench"
harness = false
